objects/copado__User_Persona_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>copado__Apply_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do not edit manually. This field is used to control the permission scheduler</inlineHelpText>
        <label>Apply Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__End_Schedule_ID__c</fullName>
        <inlineHelpText>This is the Apex Job ID for the scheduled permission revokal</inlineHelpText>
        <label>End Schedule ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Persona__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Persona</label>
        <referenceTo>copado__Persona__c</referenceTo>
        <relationshipLabel>User Persona Assignments</relationshipLabel>
        <relationshipName>User_Persona_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Start_Schedule_ID__c</fullName>
        <inlineHelpText>This is the Apex Job ID for the scheduled permission assignment</inlineHelpText>
        <label>Start Schedule ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Status_Message__c</fullName>
        <label>Status Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Permissions Assigned</fullName>
                </value>
                <value>
                    <fullName>Permissions Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                    <default>true</default>
                    <label>Permanent</label>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Persona Assignments</relationshipLabel>
        <relationshipName>User_Persona_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Persona Assignment</label>
    <nameField>
        <displayFormat>UPA-{000000000}</displayFormat>
        <label>User Persona Assignment Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Persona Assignments</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>copado__Permanent_no_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>and (
 ISPICKVAL( copado__Type__c ,&quot;Permanent&quot;),
  or (
    not( ISNULL( copado__End_Time__c ) ),
    not( ISNULL( copado__Start_Time__c  ) )
  )
)</errorConditionFormula>
        <errorDisplayField>copado__Type__c</errorDisplayField>
        <errorMessage>Cannot  specify End and Start time for Permanent permissions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Temporary_with_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>and (
 ISPICKVAL( copado__Type__c ,&quot;Temporary&quot;),
  or (
   ISNULL( copado__End_Time__c ),
   ISNULL( copado__Start_Time__c  )
  )
)</errorConditionFormula>
        <errorDisplayField>copado__Type__c</errorDisplayField>
        <errorMessage>Specify End and Start time for Temporary permissions.</errorMessage>
    </validationRules>
</CustomObject>